# Anime-Recommender-System-LLMOPS

./: .gitignore  README.md  main.py  pyproject.toml  requirements.txt  setup.py
app/: app.py
config/: config.py
data/: updated_anime.csv
pipeline/: build_pipeline.py  pipeline.py
src/: data_loader.py  prompt_template.py  recommender.py  vectore_store.py
